--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <h1> Jogos online: O básico</h1>
 
+<img class="imagem" src="images.jfif" alt="imagem de alguém jogando">
+
 <h2>O que é jogos online?</h2>
 <p>O jogo on-line descreve qualquer videogame que oferece interações on-line com outros jogadores. Os videogames
     costumavam ser classificados por um descritor PEGI de Conteúdo Online para indicar se estavam online ou não. No
@@ -23,7 +25,7 @@
     trabalho em equipe, colaboração e aventura imaginativa para as crianças. Jogados de forma saudável, contribuem com
     uma parte essencial do desenvolvimento e socialização das crianças.</p>
 <p>No entanto, é importante que os pais entendam os jogos on-line para que possam incentivar hábitos seguros e saudáveis
-    ​em crianças.</p>
+    em crianças.</p>
 
 <h2>Coisas que você precisa saber sobre jogos</h2>
 <p>O jogo é uma maneira divertida e sociável de passar tempo, incentivando o trabalho em equipe e desenvolvendo
@@ -44,3 +46,4 @@ sentir que estão deixando os companheiros de equipe para baixo.<br></p>
 </body>
 
 </html>
+
