--- a/tipos de jogos.html
+++ b/tipos de jogos.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+<header>
+
+</header>
+<main>
     <h1>Alguns tipos de jogos</h1>
     <p> O universo dos jogos tem inúmeros gêneros diferentes, como acontece com filmes e livros, cada um definido por
         suas
@@ -25,7 +29,8 @@
         por exemplo. Por ser uma categoria relativamente comum e fácil de ser encontrada, os games de ação conquistaram
         muita popularidade, além de diversos players ao redor do globo. Abaixo, listamos seus principais subgêneros.</p>
     <img class="ação" src="Ação.webp">
-    <p><b>Plataforma:</b> são jogos baseados plataformas, como o nome sugere. Foram especialmente populares nos consoles dos
+    <p><b>Plataforma:</b> são jogos baseados plataformas, como o nome sugere. Foram especialmente populares nos consoles
+        dos
         anos
         1980 e 1990. Neles, correr, pular e cair fazem parte primordial da ação. São exemplos do subgênero os conhecidos
         Super Mario Bros, Donkey Kong e Sonic;</p>
@@ -48,9 +53,11 @@
     <p><b>Furtivo:</b> Neste gênero, os jogos dão ênfase à estratégia e precisão para resolver desafios. São exemplos
         conhecidos
         desta categoria os games Dishonored, Metal Gear e Splinter Cell;</p>
-    <P><b>Sobrevivência:</b> Aqui, os jogadores precisam criar estratégias para sobreviver, como desenvolver armas, construir
+    <P><b>Sobrevivência:</b> Aqui, os jogadores precisam criar estratégias para sobreviver, como desenvolver armas,
+        construir
         casas e caçar animais, por exemplo. São exemplos Ark: Survival Evolved, Green Hell e The Forest;</p>
-    <p><b>Rítmico:</b> Nesses games, a música é o principal elemento, e praticamente não há elementos daquela ação tradicional,
+    <p><b>Rítmico:</b> Nesses games, a música é o principal elemento, e praticamente não há elementos daquela ação
+        tradicional,
         que envolve combates e brigas. Guitar Hero, Just Dance e Dance Dance Revolution são os principais exemplos.</p>
     <h2>Ação e Aventura</h2>
     <p> Esse é um gênero "combinado", que conta com duas mecânicas difundidas. Por isso, geralmente há missões de longo
@@ -62,11 +69,14 @@
         resolução de enigmas e as descobertas, sendo a ação
         um elemento adicional ao entretenimento. Confira seus principais subgêneros abaixo.</p>
     <img class="ação" src="Aventura.webp">
-    <p><b>Horror e Sobrevivência:<b> Normalmente, jogos desse gênero reúnem traços do estilo sobrevivência e do horror. Neles,
-        os
-        jogadores possuem recursos limitados, como armas e munições. São exemplos Resident Evil, Amnesia e Dead by
-        Daylight;</p>
-    <p><b>Metroidvania:</b> Aqui, a história do game não é linear. Por isso, os jogadores precisam, eventualmente, descobrir
+    <p><b>Horror e Sobrevivência:<b> Normalmente, jogos desse gênero reúnem traços do estilo sobrevivência e do horror.
+                Neles,
+                os
+                jogadores possuem recursos limitados, como armas e munições. São exemplos Resident Evil, Amnesia e Dead
+                by
+                Daylight;</p>
+    <p><b>Metroidvania:</b> Aqui, a história do game não é linear. Por isso, os jogadores precisam, eventualmente,
+        descobrir
         habilidades, armas, aliados ou itens para avançar em alguns cenários. Dessa forma, novos locais são
         desbloqueados
         conforme o player progride. Ori and the Blind Forest, Hollow Knight e Dead Cells são os principais exemplos.</p>
@@ -75,15 +85,19 @@
         gênero, ligada a Dungeons & Dragons. Não é impossível, no entanto, encontrar games que adicionem novas temáticas
         ao estilo do jogo, como acontece com Mass Effect e Fallout. Alguns dos seus principais subgêneros são:</p>
     <img class="ação" src="RPG.webp">
-    <p><b>RPG de Ação:</b> Esse gênero mistura elementos dos jogos de ação e aventura. Sua principal característica são os
+    <p><b>RPG de Ação:</b> Esse gênero mistura elementos dos jogos de ação e aventura. Sua principal característica são
+        os
         combates em tempo real. São exemplos aqui Cyberpunk 2077, Dark Souls e Fallout;</p>
-    <p><b>MMORPG:</b> A maior característica desse gênero é a presença de diversos usuários no mesmo servidor. Usualmente, os
+    <p><b>MMORPG:</b> A maior característica desse gênero é a presença de diversos usuários no mesmo servidor.
+        Usualmente, os
         jogadores compartilham objetivos similares. World of Warcraft, Final Fantasy e Tera são exemplos desta
         categoria;</p>
-    <p><b>Rouguelikes:</b> Aqui, é usual que as mortes de gameplay sejam permanentes – ou seja, quando morre, o jogador retorna
+    <p><b>Rouguelikes:</b> Aqui, é usual que as mortes de gameplay sejam permanentes – ou seja, quando morre, o jogador
+        retorna
         ao início do jogo. Outras características envolvem a geração de níveis aleatórios e a repetição como forma de
         aprimorar as habilidades do seu avatar. São exemplos Dead Cells, Hades e Rogue;</p>
-    <p><b>RPG Sandbox:</b> São RPGs em "mundos abertos", em que jogadores podem vasculhar um ambiente gigantesco em busca de
+    <p><b>RPG Sandbox:</b> São RPGs em "mundos abertos", em que jogadores podem vasculhar um ambiente gigantesco em
+        busca de
         novas aventuras e missões. É uma experiência mais envolvente, devido ao número de afazeres e riqueza de
         detalhes. The Elder Scrolls V: Skyrim, The Witcher 3: Wild Hunt e New World são os principais exemplos do
         mercado atualmente.</p>
@@ -92,12 +106,21 @@
         suas histórias. Em alguns títulos desse gênero, você precisa trabalhar, construir sua própria casa e constituir
         uma família. Por conta disso, ele acaba englobando as características de sandbox, de construção de mundos e até
         mesmo de realidade virtual. Veja, em seguida, alguns subgêneros da categoria.</p>
+        <img class="ação" src="Simulação.webp">
+    <p><b>Simulação de Construção e Gestão:</b> Normalmente, aqui, os jogadores são colocados para administrar uma cidade do
+        zero. Os usuários têm que construir ruas, casas, escolas, departamentos de polícia, estações de tratamento de
+        água e outros edifícios, para ganhar mais experiência. São exemplos SimCity, Tropico 4 e Cities Skylines;</p>
+    <p><b>Simulação de Vida:</b> Como o próprio nome diz, os jogadores conseguem simular toda uma vida no ambiente virtual. Em
+        alguns jogos, é possível alterar as reações dos personagens, além de casar, trocar de empregos e muitas outras
+        atividades presentes na vida real. The Sims, Habbo e BitLife são exemplos desse subgênero;</p>
+    <p><b>Simulação de Veículos:</b> Nesta categoria, estão presentes todos os games que simulam veículos, sejam estes
+        terrestres, como carros e caminhões, aéreos, como aviões e helicópteros, ou marítimos, como navios e submarinos.
+        Os principais exemplos são Microsoft Flight Simulator e Euro Truck Simulator.</p>
 
 
 
-
-
-        
+    </main>
+    <footer></footer>
 </body>
 
 
