--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
 
+<body>
+<header>
+<img class="controle" src="controle.png">
+<ul>
+    <li>
+        <a href="index.html">O que são jogos online</a>
+    </li>
+    <li>
+    <a href="tipos de jogos.html">Tipos de jogos</a>
+    </li>
+</ul>
+
+</header>
+<main>
 <h1> Jogos online: O básico</h1>
 
 <img class="imagem" src="images.jfif" alt="imagem de alguém jogando">
@@ -42,8 +55,15 @@ crianças podem ser intimidadas ou intimidadas<br>
 idade<br>
 - Pode ser difícil parar alguns jogos no meio de uma batalha como há penalidades para desistir e as crianças podem
 sentir que estão deixando os companheiros de equipe para baixo.<br></p>
+</main>
 
+
+
+<footer>
+
+</footer>
 </body>
-
 </html>
+
+
 
